--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -156,19 +156,22 @@ TODO: データを学習ガイドと超入門に置き換え
 
 ![index - 一覧画面](assets/crud/app_ss/index_page_with_data.png)
 
-前にも出てきた「Railsアプリがリクエストを受けてレスポンスを返すまで」をindexアクションの場合で描きなおした図が以下になります。
+今回も処理の流れを図でみてみましょう。
 
 ![Railsアプリがリクエストを受けてレスポンスを返すまで（indexアクション）](assets/crud/figures/index_flow.png)
 
-順番にRoutesから処理を追っていきます。
+Routesから順番に処理を追っていきます。
 
 ### Routes
 
-Routesはリクエストと処理を行うコントローラを決めるための対応表です。
+Routesはリクエストから処理を行うコントローラとアクションを決めるための対応表です。
 
 ![Routes](assets/crud/figures/index_flow_routes.png)
 
-Routesでリクエストから次に処理するコントローラとアクションが決まります。routes対応表を表示するために、rails serverを起動して、`http://localhost:3000/rails/info/routes` へアクセスしてみましょう。
+Routesの対応表から、リクエストごとに次に処理するコントローラとアクションが決まります。対応表を表示するために、rails serverを起動して、`http://localhost:3000/rails/info/routes` へアクセスしてみましょう。
+
+TODO: 置き換え
+★ここから
 
 ![Routes対応表](assets/crud/figures/index_routes.png)
 
