--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -226,7 +226,7 @@ TODO: 置き換え
 
 ![index画面](assets/crud/app_ss/index_page_with_data.png)
 
-ビューのコードを見てみましょう。ファイルは `app/views/books/index.html.erb` です。
+ビューのコードを見てみましょう。ファイルは `app/views/books/index.html.erb` です。抜粋して、コントローラで取得した@booksを表示させるところを見てみましょう。
 
 ```erb
 <% @books.each do |book| %> ⬅️ @booksはbookがいくつか入った配列
@@ -240,9 +240,9 @@ TODO: 置き換え
 <% end %>
 ```
 
-コントローラで取得した@booksを表示させるところを見てみましょう。表示は`<% @books.each do |book| %>`から`<% end %>` で行っています。@booksに代入された全データ（"RubyとRailsの学習ガイド"、"Ruby超入門"）でブロックを繰り返し実行し、titleやmemoを表示したり、show（詳細画面）、edit（編集画面）、削除ボタンのリンクを生成します。
+表示は`<% @books.each do |book| %>`から`<% end %>` で行っています。@booksに代入された全データ（"RubyとRailsの学習ガイド"、"Ruby超入門"）でブロックを繰り返し実行し、titleやmemoを表示したり、Show（詳細画面）、Edit（編集画面）、削除ボタンのリンクを生成します。
 
-今回のケースでは、@booksに2つのデータが入っています。@books.each文は全データで繰り返し処理を行う文です。1回目の実行では変数book（`|`記号で囲まれているところ）に「RubyとRailsの学習ガイド」のデータが入った状態となり、そのtitleやmemoが表示されます。2回目の実行では「Ruby超入門」のデータが格納されて同様の処理が実行されます。
+今回のケースでは、@booksに2つのデータが入っています。@books.each文は全データで繰り返し処理を行う文です。1回目の実行では変数book（2つの`|`記号で囲まれているところ）に「RubyとRailsの学習ガイド」のデータが入った状態となり、そのtitleやmemoが表示されます。2回目の実行では「Ruby超入門」のデータが格納されて同様の処理が実行されます。
 
 index.html.erbはHTMLのテンプレートファイルで、HTMLの中にRubyコードを埋め込むことができます。`<%= %>`で囲まれたコードは実行結果がHTMLとして出力されます。`<% %>` で囲まれたコードは実行されますが、結果を埋め込みません。今回は@books.eachの繰り返しで `<% %>` が使われています。
 
