Replace figures in new-create, model

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -18,7 +18,7 @@ categories:
 
 ## データの永続化
 
-コード中で変数に代入したデータは、変数の有効範囲（スコープと言います）が終わると消えてしまいます。以下のコードで説明しましょう。
+コード中で変数に代入したデータは、変数の有効範囲（スコープと言います）が終わると消えてしまいます。次のコードを見てみましょう。
 
 ```ruby
 def print_hello_world
@@ -27,23 +27,17 @@ def print_hello_world
 end
 ```
 
-変数xの有効範囲（スコープ）は、そのメソッドの中だけです（このような変数をローカル変数と呼びます）。この場合、メソッド `print_hello_world`の実行が終わると変数xと、それが指すオブジェクトは消えてしまいます。
+変数xの有効範囲（スコープ）は、そのメソッドの中だけです（このような変数をローカル変数と呼びます）。この場合、メソッド`print_hello_world`の実行が終わると変数xと、それが指すオブジェクトは消えてしまいます。
 
-別の種類の変数として、前の章でも出てきたインスタンス変数（@はじまりの変数）があります。インスタンス変数は、インスタンス（オブジェクト）がなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます。ここではおおまかに、ブラウザであるページを表示することが1回のリクエストだと考えて差し支えありません。別のページを表示したり、リロードを行ったりすると、新しい別のリクエストになります。@bookのようなインスタンス変数に格納すると、コントローラからビューまで使うことができますが、その後なくなります。
+別の種類の変数として、前の章でも出てきた@bookのようなインスタンス変数（名前が@はじまりの変数）があります。インスタンス変数は、インスタンス（オブジェクト）がなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます。ここではおおまかに、ブラウザであるページを表示することが1回のリクエストだと考えて差し支えありません。別のページを表示したり、リロードを行ったりすると、新しい別のリクエストになります。インスタンス変数に代入すると、コントローラからビューまで使うことができますが、その後なくなります。
 
 それでも、つくったRailsアプリでは別のリクエストでも情報が見れますよね？　新規入力画面で情報を入力して一度登録してしまえば、その後ブラウザから何回アクセスしても、たとえば一覧画面で何回リロードしても表示されます。
 
-つまり、複数のリクエストに渡ってデータが保存されていることが分かります。これはインスタンス変数では実現できません。データがずっと残っているのは「データを保存する」仕事をしている「何かの仕組み」があるからなのです。
+つまり、複数のリクエストに渡ってデータが保存されていることになります。これはインスタンス変数では実現できません。データがずっと残っているのは「データを保存する」仕事をしている「何かの仕組み」があるからなのです。
 
 その仕組みがこの章の主役、モデル（Model）です。
 
-TODO: 本文とスクショへ分解
-
-![モデル](assets/model/figures/overview.png)
-
 この章はモデルについて説明します。また、この章では前の章につづいてCRUDのcreateの部分を題材に説明します。
-
-TODO: 新図置き換え
 
 ![この章の題材](assets/model/figures/crud-create.png)
 
@@ -52,26 +46,44 @@ TODO: 新図置き換え
 app/controllers/books_controller.rb
 
 ```ruby
-@book = Book.new(book_params) # 1. リクエストのパラメータを使って本のデータを作る
-
-respond_to do |format|
-  if @book.save # 2. 本のデータを保存する
-    # 3a. 成功したらshow画面へ
-    format.html { redirect_to @book, notice: 'Book was successfully created.' }
-    format.json { render :show, status: :created, location: @book }
-  else
-    # 3b. 失敗したらnew画面へ（前の画面）
-    format.html { render :new }
-    format.json { render json: @book.errors, status: :unprocessable_entity }
+def create
+  @book = Book.new(book_params) # ⬅️1. リクエストのパラメータを使って本のデータを作る
+  respond_to do |format|
+    if @book.save # ⬅️2. 本のデータを保存する
+      # ⬅️3a. 成功したらshow画面へ
+      format.html { redirect_to @book, notice: 'Book was successfully created.' }
+      format.json { render :show, status: :created, location: @book }
+    else
+      # ⬅️3b. 保存失敗したらnew画面へ（元の画面）
+      format.html { render :new }
+      format.json { render json: @book.errors, status: :unprocessable_entity }
+    end
   end
 end
 ```
 
 モデルに関する部分はここです。
 
-TODO: リクエストの図と本文へ分解
+★ここから
+
+TODO: リクエストの図と本文へ分解。コードは書いた。現状の図を消して、new-create/create_flow_controller.htmlを変更して載せた方が良さそう
 
 ![モデルを使っている箇所](assets/model/figures/create-model.png)
+
+```ruby
+def create
+  @book = Book.new(book_params) # ⬅️BookクラスはModelという種族に属する
+  respond_to do |format|
+    if @book.save # ⬅️ここで保存
+      format.html { redirect_to @book, notice: 'Book was successfully created.' }
+      format.json { render :show, status: :created, location: @book }
+    else
+      format.html { render :new }
+      format.json { render json: @book.errors, status: :unprocessable_entity }
+    end
+  end
+end
+```
 
 では、モデルの仕事について見ていきましょう。
 
