--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -221,14 +221,11 @@ create    app/models/book.rb
 
 ## マイグレーション（migration）ファイル
 
-★ここから
-
-
 DBの設計書をマイグレーションファイルと呼びます。マイグレーションファイルもRails（Ruby）のコードで書かれています。
 
-では、マイグレーションファイルを見てみましょう。ファイル名には"20191008234834"と実行した日付けから作られた数字が入っているので、rails gコマンドを実行するごとに異なるファイル名になります。
+では、マイグレーションファイルを見てみましょう。ファイル名には"20191212002328"と実行した日付から作られた数字が入っているので、rails gコマンドを実行するごとに異なるファイル名になります。
 
-`db/migrate/20191008234834_create_books..rb`
+`db/migrate/20191212002328_create_books..rb`
 
 ```ruby
 class CreateBooks < ActiveRecord::Migration[6.0]
@@ -243,29 +240,21 @@ class CreateBooks < ActiveRecord::Migration[6.0]
 end
 ```
 
-1行目の `ActiveRecord::Migration[6.0]` の末尾にある数字はRailsのバージョンを表します。Rails6.0.xではこのように6.0となります。
+1行目 `ActiveRecord::Migration[6.0]` の末尾にある数字はRailsのバージョンを表します。Rails6.0.xではこのように6.0となります。
 
-3行目の `create_table :books` でbooksという名前のテーブルを作ります。DBはテーブルという単位でデータを管理します。ここでは、本に関するデータを保存するためにbooksという名前のテーブルを作っています。テーブル名はモデル名の複数形にするというルールがあります。
+3行目 `create_table :books` でbooksという名前のテーブルを作ります。DBはテーブルという単位でデータを管理します。ここでは、本に関するデータを保存するためにbooksという名前のテーブルを作っています。テーブル名はモデル名の複数形にするというルールがあります。
 
-4行目と5行目はテーブルの要素を作成しています。booksテーブルはtitleという要素と、memoという要素を持ちます。この要素のことをDBの用語でカラムといいます。stringはデータの型の1つです。文字列を格納します。textもデータの型の1つで、stringよりも長く文字列を格納できる型です。
+4行目 `t.string :title` と5行目 `t.text :memo` はテーブルの要素を作成しています。これでbooksテーブルにはtitleという要素と、memoという要素を持つことになります。この要素のことをDBの用語でカラムといいます。stringはデータの型の1つです。文字列を格納します。textもデータの型の1つで、stringよりも長い文字列を格納できる型です。
 
 それに続く `t.timestamps` は、`created_at`（作成日時）、`updated_at`（更新日時）を記録するカラムを作ります。
 
 DBのテーブルはExcelをイメージすると分かり易いです。DBへデータを格納していくことは、title、memoといった列があるExcelのシートに1行ずつデータを格納していくイメージです。
 
-TODO: スクショだけに分解
-
 ![booksテーブルのイメージ](assets/model/figures/migration_excel.png)
 
 ところで、 `t.string :title` や `t.text :memo` に見覚えがありませんか？
 
-実はscaffoldで指定していたのはこの部分です。
-
-TODO: 本文分解。下線はコメントでうまくできるか？もしくは新図を流用できるか？
-
-![scaffoldの説明](assets/model/figures/migration_scaffold_explain.png)
-
-scaffoldで指定していたのはテーブル名とカラム、データの型でした。前に説明した通り、stringもtextもデータの型で、どちらも文字列を格納できます。
+これらはscaffoldのコマンドで書かれていました。実は、scaffoldで指定していたのはテーブル名とカラム、データの型でした。scaffoldでは、booksテーブルにstring型であるtitleカラムとtext型であるmemoカラムを作成する、という指示を与えていたことになります。
 
 ここまでで、scaffoldはDB設計書（migration）を作ることを説明しました。
 
