--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -443,15 +443,9 @@ $ rails db:migrate
 
 ここまでの作業をまとめると、以下のようになります。
 
-TODO: 新図をアレンジして置き換え
-
 ![booksテーブルにstring型のauthorを加えるmigration](assets/model/figures/migration_new_column_author.png)
 
-ちなみに、Railsのgenerate機能は開発をアシストする機能なので、使わないで0から手でコードを書いても同様に動きます。rails gを使ってファイルを作っても、0から手でコードを書いても同じ結果になります。以下の図を参考にしてください。
-
-TODO: 新図をアレンジして置き換え、本文に展開
-
-![generateしても、0から書いても良い](assets/model/figures/migration_generate_or_write.png)
+ちなみに、Railsのgenerate機能は開発をアシストする機能なので、使わないで0から手でコードを書いても同様に動きます。つまり、rails gを使ってファイルを自動生成してから変更しても、0から手でコードを書いても、どちらも同じ結果になります。ほかのrails gコマンド、scaffoldやcontrollerなども全て同様です。
 
 ## 新しいモデルとmigrationを一緒に作るには？
 
@@ -462,7 +456,7 @@ rails g model book title:string memo:text
 ```
 
 ```console
-db/migrate/20160216060032_create_books.rb
+db/migrate/20191217005616_create_books.rb
 app/models/book.rb
 ```
 
@@ -494,7 +488,7 @@ rails g scaffold: model + migration + routes + controller + view
 $ rails g scaffold book title:string memo:text
 ```
 
-## 発展課題: scaffoldでつくったCRUDページを持つモデルへカラムを追加するには？
+## scaffoldでつくった既存テーブルへカラムを追加するには？
 
 すでにあるbooksテーブルにstring型のauthorを加えて、ブラウザから入力できるようにしてみましょう。
 
@@ -506,12 +500,12 @@ $ rails g migration AddAuthorToBooks author:string
 ```console
 $ rails g migration AddAuthorToBooks author:string
       invoke  active_record
-      create    db/migrate/20191017231132_add_author_to_books.rb
+      create    db/migrate/20191217005831_add_author_to_books.rb
 ```
 
 作成されたファイルは以下のようになっています。
 
-`db/migrate/20191017231132_add_author_to_books.rb`
+`db/migrate/20191217005831_add_author_to_books.rb`
 
 ```ruby
 class AddAuthorToBooks < ActiveRecord::Migration[6.0]
@@ -528,10 +522,10 @@ $ rails db:migrate
 ```
 
 ```console
-== 20191017231132 AddAuthorToBooks: migrating =================================
+== 20191217005831 AddAuthorToBooks: migrating =================================
 -- add_column(:books, :author, :string)
    -> 0.0031s
-== 20191017231132 AddAuthorToBooks: migrated (0.0033s) ========================
+== 20191217005831 AddAuthorToBooks: migrated (0.0033s) ========================
 ```
 
 ### viewを修正
