--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -12,11 +12,11 @@ categories:
 
 # Gemライブラリ
 
-この章ではGemについて説明します。前に出てきたGemfileやbundleコマンドについて説明をしていきます。
+この章ではGemについて説明します。Gemfileやbundleコマンドについても説明をしていきます。
 
 ## Gemライブラリ
 
-プログラミングの世界では便利なプログラム集がたくさん公開されています。いろいろなプログラムで共通して使える便利な公開されたプログラムをライブラリと呼びます。
+プログラミングの世界では便利なプログラムがたくさん公開されています。いろいろなプログラムで共通して使える便利な公開されたプログラムをライブラリと呼びます。
 
 Rubyの世界にもライブラリがあり、Gemと呼ばれます。Gemは [rubygems.org](https://rubygems.org) で公開されていて、10万を越えるGemが登録されています。RailsはWebアプリをかんたんに作るGemの集合体として設計されています。
 
@@ -93,7 +93,7 @@ gem 'rails', '~> 6.0.0'
 + gem 'awesome_print'
 ```
 
-書いて保存したら、以下のようにbundle installコマンドを実行します。または、installを省略してbundleと書くこともできます。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
+書いて保存したら、以下のようにbundle installコマンドを実行します。または、installを省略してbundleとすることもできます。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
 
 ```console
 $ bundle
@@ -128,19 +128,19 @@ $ rails c
 }
 ```
 
-ターミナルに改行されて色がついて読み易く表示されているかと思います。またRailsアプリの場合はrequireを書く必要がありません。ちなみに、書いても問題ありません。requireは複数回実行しても問題ないためです。
+ターミナルに改行されて色がついて読み易く表示されているかと思います。またRailsアプリではrequireを書く必要がありません。ちなみに、書いても問題ありません。requireは複数回実行しても問題ないためです。
 
-公開されているRubyで書かれたプログラムにGemfileが添えられていたときにはbundle installコマンドを実行してからプログラムを実行してみましょう。多くの場合、ドキュメントにその旨が書かれていますが、当たり前の動作であるため省略されていることもあります。
+公開されているRubyで書かれたプログラムにGemfileが添えられていたときにはbundle installコマンドを実行してからプログラムを実行してみましょう。多くの場合、ドキュメントにその旨が書かれていますが、暗黙の了解で省略されていることもあります。
 
 また、Gemfileを変更してbundleコマンドを実行すると、Gemfile.lockというファイルが作成されます。Gemfile.lockには、使われているGem名とそのバージョン情報が記録されています。Gemfile.lockは自動で作られるものなので、編集する必要はありません。ソースコードを保管するときは、GemfileとGemfile.lockの両方のファイルを保管してください。
 
-2つのファイルの違いを例え話で説明すると、GemfileはGemをインストールするための発注書です。Gemfileに使いたいGem名を書いて、bundle installコマンドを実行すると、発注書に従ってGemがインストールされます。Gemfile.lockは納品書です。発注書に基づいて実際にインストールされたGemとそのバージョン情報などが書かれています。
+2つのファイルの違いを例え話で説明すると、GemfileはGemをインストールするための発注書です。Gemfileに使いたいGem名を書いて、bundle installコマンドを実行すると、発注書に従ってGemがインストールされます。Gemfile.lockは納品書です。発注書にもとづいて実際にインストールされたGemとそのバージョン情報などが書かれています。
 
 ## Gemfileに書かれたGemのバージョンアップ
 
-各Gemは随時、新しいバージョンがリリースされます。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は`bundle update`コマンドを使います。実行すると、新しいバージョンのGemがあるときには、新しいバージョンのGemをインストールし、Gemfile.lockファイルを更新します。`bundle update`コマンドを実行すると、Gemfile中のすべてのGemがバージョンアップ対象となります。
+各Gemは随時、新しいバージョンがリリースされます。Gemfileに書かれたGemの新しいバージョンをインストールしたい場合は`bundle update`コマンドを使います。実行すると、新しいバージョンのGemがあればインストールして、Gemfile.lockファイルを更新します。`bundle update`コマンドを実行すると、Gemfile中のすべてのGemがバージョンアップ対象となります。
 
-特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名を添えて実行すればOKです（指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます）。
+特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名をつけて実行すればOKです。指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます。
 
 ## Gemfileを使って実行する
 
@@ -178,11 +178,11 @@ gem 'sqlite3', '~> 1.4'
 
 ポイントをまとめます。
 
-- いろんなプログラムにて共通で使える便利な公開されたプログラムをライブラリと呼ぶ
+- いろんなプログラムから使える便利な公開されたプログラムをライブラリと呼ぶ
 - GemはRubyの世界のライブラリ
 - Gemをインストールするにはgem iコマンド（gem installの省略形）を使う
 - Bundlerは複数のGemをかんたんに管理する仕組み
 - BundlerではGemfileという名前のファイルに使用するGemを書く
-- Gemfileを作成しbundleコマンド（bundle installの省略形）を実行することでGem群をインストールする
+- Gemfileを作成しbundleコマンド（bundle installの省略形）を実行すると、Gem群がインストールされる
 - bundleコマンドを実行するとGemfileに加えてGemfile.lockファイルが生成されるので、両方をソース管理対象にする
-- 例えると、Gemfileは発注書、Gemfile.lockは納品書
+- Gemfileは発注書、Gemfile.lockは納品書に相当する
