Writing replacer.rb for books_app

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -305,9 +305,7 @@ end
 
 `@book.save`に成功するとtrueを返すので、`redirect_to @book, notice: 'Book was successfully created.'`が実行されます。redirect_toはリダイレクト（新たにリクエストを発行して画面遷移させる）指示で、ここではshowアクションへのリクエストが発生します。保存した本の詳細ページ（BooksControllerのshowアクション）を表示します。後ろのnotice部は画面に表示させる文を設定しています。
 
-TODO: スクショ再作成置換
-
-![リダイレクト後のshowアクション画面とnoticeの表示](assets/model/app_ss/redirect_to_show.png)
+![リダイレクト後のshowアクション画面とnoticeの表示](assets/crud/app_ss/books_created_data_1.png)
 
 `@book.save`に失敗するとfalseを返すので、ifのelse節、`render :new`が実行されます。renderはコントローラの次の処理であるビューを指定します。ここでは`app/views/books/new.html.erb`がビューとして使われ、新規入力画面、つまり直前で入力していたページが表示されます。
 
@@ -643,16 +641,6 @@ end
 
 rails serverを起動して動作を確認してみましょう。
 
-TODO: 新スクショ置き換え
+![新規入力画面](assets/model/app_ss/books_with_author_new.png)
 
-![新規入力画面](assets/model/app_ss/add_author_new.png)
-
-TODO: 新スクショ置き換え
-
-![詳細画面](assets/model/app_ss/add_author_show.png)
-
-TODO: 新スクショ置き換え
-
-![一覧画面](assets/model/app_ss/add_author_index.png)
-
-各画面にAuthor欄が追加されて、登録できるようになりました。
+new、show、indexの各画面にAuthor欄が追加されて、登録できるようになりました。
