--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -45,11 +45,11 @@ categories:
 - ゼロからわかる Ruby超入門
   - 978-4297101237
 
-プログラミングが初めての方へ向けた、Rubyプログラミングの入門書です。プログラミングの基礎である条件分岐、繰り返しの概念を図解を入れて丁寧に説明します。また、この本で学ぶRailsで使う知識を広くカバーするように書いています。
+初めてプログラミングをする方へ向けた、Rubyプログラミングの入門書です。プログラミングの基礎である条件分岐、繰り返しの概念を図解を入れて丁寧に説明します。また、この本で学ぶRailsで使う知識を広くカバーするように書いています。
 
 もしもあなたが他の言語でプログラミングをした経験があれば、これも大きなアドバンテージです。特にJavaScript（ブラウザ上で動作するプログラミング言語）の経験がある方は、本書の知識をつかってインタラクティブで格好良いWebアプリを作ることができるようになるでしょう（本書ではJavaScriptについては説明しません）。また、Rubyの経験がある方は、本書の内容を越えた範囲について、いままでの知識をつかって早く成長することができるでしょう。
 
-そして、Railsプログラミングを講義で教えたい方もいらっしゃると思います。本書はWebアプリがどういうものなのかを実際に手を動かしながら学ぶ構成になっています。大学での実際の講義資料を元に書いており、プログラミングが初めての学生さんらに向けて行った、1回90分の講義10回分の内容です。その後、3回の講義時間を使って自由にWebアプリを作る実習を行ったところ、彼ら彼女らは自分で考えた、実用的であったり、たのしさにあふれたりする、独創性のあるプログラムを作りあげて発表してくれました。本書はできるだけやさしい説明を心がけますが、Rubyのことやshellのこと、プログラミングでしか使わない記号など、つまづいた際にはサポートの手を差し伸べられる環境を作っておくと順調に前へ進めるようになります。
+そして、Railsプログラミングを講義で教えたい方もいらっしゃると思います。本書はWebアプリがどういうものなのかを手を動かしながら学ぶ構成になっています。大学で行った講義の資料を元に書いており、プログラミングが初めての学生さんらに向けて行った、1回90分の講義10回分の内容です。その後、3回の講義時間を使って自由にWebアプリを作る実習を行ったところ、彼ら彼女らは自分で考えた、実用的であったり、たのしさにあふれたりする、独創性のあるプログラムを作りあげて発表してくれました。本書はできるだけやさしい説明を心がけますが、Rubyのことやターミナルのこと、プログラミングでしか使わない記号など、つまづいたときにサポートの手を差し伸べられる状況を作っておくと順調に前へ進めるようになります。
 
 一方で、本書の対象から外れるのは以下のような方です。
 
@@ -104,15 +104,17 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書はRuby 2.7.0、Rails 6.0.0で動作確認をしています。2019年12月26日現在、Rubyの最新バージョンは2.7.0、Railsの最新バージョンは6.0.0です。
+本書は2020年1月1日現在の最新バージョンであるRuby 2.7.0、Rails 6.0.2.1で動作確認をしています。
 
-本書の内容を実行する場合にはRubyおよびRailsの開発環境を作る必要があります。MacとWindowsの場合それぞれでの環境構築方法を説明して、そのあとでどちらの環境でも共通であるRubyとRailsのインストール方法を説明します。
+Webアプリのプログラムを書くための道具として、ターミナル、エディタ、ブラウザをつかいます。
 
-ブラウザはお好きなものをご利用いただけますが、 [Chrome](https://www.google.co.jp/chrome/browser/) の機能を例にして説明していますので、Chromeを使うと分かり易いです。
+ターミナルはコンピュータをコントロールするための道具です。自分で書いたプログラムをターミナルから実行することができます。ターミナルでRubyおよびRailsのプログラムを実行するためには、開発環境を作る必要があります。最初にMacとWindowsの場合それぞれでの環境構築方法を説明して、そのあとでどちらの環境でも共通であるRubyとRailsのインストール方法を説明します。
 
-プログラムを入力する道具であるエディタは、好みのものがあればそれを利用してください。特にない場合は [Visual Studio Code](https://code.visualstudio.com/) をお勧めします。Visual Studio Codeは無料で利用することができます（ライセンスはMITライセンスです）。
+エディタはプログラムを入力する道具です。エディタは好みのものがあればそれを利用してください。特にない場合は [Visual Studio Code](https://code.visualstudio.com/) をお勧めします。Visual Studio Codeは無料で使うことができます。ライセンスはMITライセンスです。
 
-もしもここに書いている内容でうまくいかない場合は、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページに書かれたRails環境構築情報が新しい情報で更新されているので、こちらも参考にしてみてください。
+ブラウザはつくったWebアプリへアクセスするための道具としてつかいます。お好きなものをご利用いただけますが、 [Chrome](https://www.google.co.jp/chrome/browser/) を例に説明していますので、Chromeを使うと分かりやすいです。
+
+もしもここに書いている内容でうまくいかない場合は、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページが新しい情報で更新されているので、こちらも参考にしてみてください。
 
 ### Macに開発環境をつくる
 
@@ -141,15 +143,13 @@ $ source ~/.bash_profile
 
 ### Windowsに開発環境をつくる
 
-Windowsの場合はWSL（Windows Subsystem for Linux）とrbenvを利用することで開発環境をつくることができます。インストールしたWSL上で、rbenvやaptなどLinux/UNIX向けツールを利用して開発します。WSLを利用するためにはWindows10以降が必要です。もしもWindows10よりも前のバージョンを利用している場合や、WSLのインストールがうまく行かないときには、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページにある「Windows 用セットアップ（WSLが使えない方向け）」が利用できるかもしれません。
+Windowsの場合はWSL（Windows Subsystem for Linux）とrbenvを利用することで開発環境をつくることができます。インストールしたWSL上でLinux向けツールを利用して開発します。WSLを利用するためにはWindows10以降が必要です。もしもWindows10よりも前のバージョンを利用している場合や、WSLのインストールがうまく行かないときには、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページにある「Windows 用セットアップ（WSLが使えない方向け）」を参考にしてみてください。
 
-WSLをインストールする方法は [Windows Subsystem for Linux Installation Guide for Windows 10 のページ](https://docs.microsoft.com/ja-jp/windows/wsl/install-win10) に書かれていますので、こちらを参照してください。また、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページにも同様の手順が丁寧に説明されています。
+WSLをインストールする方法は [Windows Subsystem for Linux Installation Guide for Windows 10 のページ](https://docs.microsoft.com/ja-jp/windows/wsl/install-win10) に書かれていますので、こちらの手順でインストールしてください。また、 [RailsGirlsガイド インストール・レシピ](http://railsgirls.jp/install) のページにも同様の手順がスクリーンショットをつかって丁寧に説明されています。インストールするLinuxを選ぶところでは好きなものを選んでもらって構いませんが、特になければUbuntuを選択することをお勧めします。
 
-インストールするLinuxを選ぶところでは好きなものを選んでもらって構いませんが、特になければUbuntuを選択することをお勧めします。
+WSLのインストール後、起動したアプリケーションはターミナルあるいはBashウィンドウと呼びます。ターミナルにはユーザー名とパスワードの入力を促す画面が表示されていますので、適当なユーザー名（半角英数小文字のみ）とパスワードを入力しましょう。パスワードは2回入力する必要があり、画面には表示されませんが正しく入力されています。
 
-WSLのインストール後、起動したアプリケーション（Bashウィンドウと呼びます）にはユーザー名とパスワードの入力を促す画面が表示されていますので、適当なユーザー名（半角英数小文字のみ）とパスワードを入力しましょう。パスワードは2回入力する必要があり、画面には表示されませんが正しく入力されています。
-
-Bashウィンドウで以下のコマンドを実行してください。なお、最初のコマンドを実行する際にパスワードの入力を求められますが、先程Bashウィンドウに入力したパスワードを入力してください。Windowsのパスワードではないことに注意してください。 `sudo dpkg-reconfigure tzdata` を実行するとタイムゾーンを設定する画面が出ますので、「Asia」を矢印キーで移動して選択して、Tabキーを押してOkボタンに移動して、Enterキーを押してください。つづいて都市を選択する以下の画面が起動するので、「Tokyo」を矢印キーで移動して選択して、Tabキーを押してOkボタンに移動して、Enterキーを押してください。
+ターミナルで以下のコマンドを実行してください。なお、最初のコマンドを実行する際にパスワードの入力を求められますが、先程ターミナルに入力したパスワードを入力してください。Windowsのパスワードではないことに注意してください。 `sudo dpkg-reconfigure tzdata` を実行するとタイムゾーンを設定する画面が出ますので、「Asia」を矢印キーで移動して選択して、Tabキーを押してOkボタンに移動して、Enterキーを押してください。つづいて都市を選択する以下の画面が起動するので、「Tokyo」を矢印キーで移動して選択して、Tabキーを押してOkボタンに移動して、Enterキーを押してください。
 
 ```console
 $ sudo apt update
@@ -172,13 +172,13 @@ $ source ~/.bashrc
 
 ### RubyとRailsをインストールする
 
-rbenvを使ってRubyをインストールします。
+rbenvを使ってRubyをインストールします。Rubyのバージョンは、より新しいものがあればそちらを利用して構いません。rbenvからインストール可能なRubyのバージョンは`rbenv install -l`で調べることができます。
 
 ```console
 $ rbenv install 2.7.0
 ```
 
-installしたRubyを利用するように設定します。
+インストールしたRubyを利用するように設定します。
 
 ```console
 $ rbenv global 2.7.0
@@ -194,11 +194,13 @@ $ gem i rails
 
 ```console
 $ rails -v
-Rails 6.0.0
+Rails 6.0.2.1
 ```
 
-このようにインストールしたrailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
+このようにインストールしたRailsのバージョンが表示されればインストール成功です。結果に表示されるバージョンの数字は、実行時の最新バージョンとなるため異なることがあります。
+
+Railsは最新バージョンのものをつかって問題ありませんが、もしも問題が出て進められなくなったときには、`gem i rails -v 6.0.2.1`のようにバージョンを指定して、本書の内容と揃えることもできます。そのときには、以降のページで出てくる`rails new アプリ名`コマンドを実行するときに、つかうバージョンを指定し`rails _6.0.2.1_ new アプリ名`とします。
+
+また、本書執筆時の最新バージョンであるRuby2.7.0とRails6.0.2.1の組み合わせは、ターミナルで多くのWarning（警告）メッセージが出ます。次のバージョンへ向けての互換性に関する警告が多く、有用で大切なものではありますが、ほかの重要なメッセージが見づらくなる問題もあります。RubyとRailsのバージョンをみなさんが実行するときの最新バージョンにすることで、Warningメッセージが少なくなっている可能性があります。できるだけ新しいバージョンを使うことをお勧めします。
 
 ここまででRubyとRailsの開発環境構築ができました。
-
-TODO: Dockerで環境構築できるか調べてみる
