--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -388,7 +388,7 @@ whereメソッドを使うと検索ができます。タイトルが"RubyとRail
 
 ## 既存のDBテーブルにカラムを増やすには？
 
-既存のDBテーブルにカラムを増やすにはどうすれば良いでしょうか？前に作ったmigrationファイルを変更してもうまくいきません。各migrationファイルは1回だけ実行される仕組みなので、過去に実行されたmigrationファイルを変更しても、そのファイルは実行されないからです。そこで、新しいカラムを追加するには、新しいmigrationファイルを作ります。
+既存のDBテーブルにカラムを増やすにはどうすれば良いでしょうか？前につくったmigrationファイルを変更してもうまくいきません。各migrationファイルは1回だけ実行される仕組みなので、過去に実行されたmigrationファイルを変更しても、そのファイルは実行されないからです。そこで、新しいカラムを追加するには、新しいmigrationファイルをつくります。
 
 rails gコマンドにmigrationを指定するとmigrationファイルだけを生成できます。たとえば、booksテーブルにstring型のauthorを加えるには以下のようにします（ファイル名中の"20191212002328"は実行するごとに異なります）。
 
