--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -86,7 +86,7 @@ gem 'sqlite3', '~> 1.4'
 ...
 ```
 
-Railsアプリは最初に作った状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'`の次の行に書いてみます。
+Railsアプリは最初につくった状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'`の次の行に書いてみます。
 
 ```diff
 gem 'rails', '~> 6.0.0'
