--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -27,9 +27,9 @@ def print_hello_world
 end
 ```
 
-変数xの有効範囲（スコープ）は、そのメソッドの中だけです（このような変数をローカル変数と呼びます）。この場合、メソッド`print_hello_world`の実行が終わると変数xと、それが指すオブジェクトは消えてしまいます。
+ここでの変数xのように、@などの記号が変数名の先頭についていない変数をローカル変数と呼びます。変数xの有効範囲（スコープ）は、そのメソッドの中だけです。この場合、メソッド`print_hello_world`の実行が終わると変数xと、それが指すオブジェクトは消えてしまいます。
 
-別の種類の変数として、前の章でも出てきた@bookのようなインスタンス変数（名前が@はじまりの変数）があります。インスタンス変数は、インスタンス（オブジェクト）がなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます。ここではおおまかに、ブラウザであるページを表示することが1回のリクエストだと考えて差し支えありません。別のページを表示したり、リロードを行ったりすると、新しい別のリクエストになります。インスタンス変数に代入すると、コントローラからビューまで使うことができますが、その後なくなります。
+別の種類の変数として、前の章でも出てきた@bookのようなインスタンス変数（名前が@はじまりの変数）があります。インスタンス変数は、インスタンス（オブジェクト）がなくなると一緒に消えます。Railsの場合は、1つのリクエスト内が有効範囲だと考えることができます。ここではおおまかに、あるページをブラウザで表示することが1回のリクエストだと考えて差し支えありません。別のページを表示したり、リロードを行ったりすると、新しい別のリクエストになります。インスタンス変数に代入すると、コントローラからビューまで使うことができますが、その後なくなります。
 
 それでも、つくったRailsアプリでは別のリクエストでも情報が見れますよね？　新規入力画面で情報を入力して一度登録してしまえば、その後ブラウザから何回アクセスしても、たとえば一覧画面で何回リロードしても表示されます。
 
