Modify about Ruby超入門 in preface page

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -40,10 +40,7 @@ categories:
 
 プログラミングの世界、Webの世界は広大です。本書ではHTML（ブラウザで表示するための言語）とCSS（HTMLと一緒に使う、装飾するための言語）については最低限の説明のみにとどめています。学習したい方へ、巻末にHTMLとCSSを学習する資料を載せています。もしもあなたがデザイナーであり、HTMLコーディングはおてのもの、という場合は大きなアドバンテージがあります。本書の知識と組み合わせることで鮮やかなWebアプリを作ることができるようになるでしょう。
 
-また、プログラミングが初めての方で、本書を読んで「プログラムの基礎をもっと学んでから挑戦したい」「プログラムを読んで理解はできるが、自分で考えて書くのが難しい」と感じた方は、筆者の別著書である「ゼロからわかる Ruby超入門」をお勧めします。
-
-- ゼロからわかる Ruby超入門
-  - 978-4297101237
+また、プログラミングが初めての方で、本書を読んで「プログラムの基礎をもっと学んでから挑戦したい」「プログラムを読んで理解はできるが、自分で考えて書くのが難しい」と感じた方は、筆者の別著書である「ゼロからわかる Ruby超入門」（書籍情報はあとがきの章にあります）をお勧めします。
 
 初めてプログラミングをする方へ向けた、Rubyプログラミングの入門書です。プログラミングの基礎である条件分岐、繰り返しの概念を図解を入れて丁寧に説明します。また、Railsで使う知識を広くカバーするように書いています。
 
