Brush up gem page

--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -73,31 +73,37 @@ BundlerでGem群をインストールするには2つの手順を実行します
 
 Railsアプリは最初からBundlerの仕組みを利用するようになっています。GemfileはRailsアプリの場合、Railsのルートフォルダに置いてあります。エディタで開いてみましょう。
 
+TODO: 最新Railsバージョンで更新
+
 ```ruby
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.6.5'
+#ruby '2.7.0'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 6.0.0'
+gem 'rails', '~> 6.0.2', '>= 6.0.2.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
 ...
 ```
 
-Railsアプリは最初につくった状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、`gem 'rails'`の次の行に書いてみます。
+たくさんのgemが表示されました。Railsアプリは最初につくった状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、たとえば `gem 'rails', ...`の次の行に書くことにします。
 
 ```diff
-gem 'rails', '~> 6.0.0'
+gem 'rails', '~> 6.0.2', '>= 6.0.2.1'
 + gem 'awesome_print'
+# Use sqlite3 as the database for Active Record
+gem 'sqlite3', '~> 1.4'
 ```
 
 書いて保存したら、以下のようにbundle installコマンドを実行します。または、installを省略してbundleとすることもできます。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
 
+TODO: 最新Railsバージョンで更新
+
 ```console
 $ bundle
-Using rake 13.0.0
+Using rake 13.0.1
 ...
 Using awesome_print 1.8.0
 ...
@@ -154,7 +160,7 @@ bundle exec rake -T
 
 このように、実行したいコマンドの前にbundle execと書くことで、Gemfile, Gemfile.lockに書かれたバージョンのGemを使って実行します。bundle execに続けて、railsコマンドのほか、rubyコマンド、rakeコマンド、irbコマンドなど、Rubyに関係するあらゆるコマンドを書くことができます。
 
-ここまで、railsコマンドを使ってきました。ここにbundle execを書かなくてもいいのでしょうか？答えは、「書く必要はない」です。railsコマンドを実行すると、bin/railsファイルが実行され、その中でbundle exec相当の処理を行っています。
+ところで、ここまでrailsコマンドを使ってきましたが、ここにbundle execを書かなくてもいいのでしょうか？答えは、「書く必要はない」です。railsコマンドを実行すると、bin/railsファイルが実行され、その中でbundle exec相当の処理を行っています。
 
 ## Gemfileでのバージョン指定
 
