--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -88,16 +88,13 @@ gem 'sqlite3', '~> 1.4'
 ...
 ```
 
-たくさんのgemが表示されました。Railsアプリは最初につくった状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、たとえば `gem 'rails', ...`の次の行に書くことにします。
+たくさんのgemが表示されました。Railsアプリは最初につくった状態ですでに10個以上のgemが登録されています。ここに、さきほどのawesome_print gemを追加してみましょう。書く場所はどこでも良いのですが、一番最後の行へ追加することにします。Gemfileへ次の一行を追加して保存します。
 
-```diff
-gem 'rails', '~> 6.0.2', '>= 6.0.2.1'
-+ gem 'awesome_print'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3', '~> 1.4'
+```ruby
+gem 'awesome_print'
 ```
 
-書いて保存したら、以下のようにbundle installコマンドを実行します。または、installを省略してbundleとすることもできます。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
+追加して保存したら、以下のようにbundle installコマンドを実行します。または、installを省略してbundleとすることもできます。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
 
 TODO: 最新Railsバージョンで更新
 
