Replace http to https and adding URL info

--- a/_posts/2016-02-17-postface.md
+++ b/_posts/2016-02-17-postface.md
@@ -16,11 +16,18 @@ categories:
 
 ### GitとGitHubでソースコードを管理する
 
-Gitはソースコードを管理するシステムであり、遠隔地にあるリポジトリ（ソースコード管理庫）と通信するコマンド群も提供しています。Gitを使うと、プログラムを昔のある時点まで遡ったり、他の人が書いたプログラムを自分の手元に取得することができます。GitHubはGitを使ったソースコード管理を提供するほか、コードを公開したり、コードで対話する仕組みであるPull Requestといった機能を提供する開発プラットフォームです。資料としては、 [『RailsGirlsガイド GitHubに自分のアプリをPushする』](http://railsgirls.jp/github) などが参考になります。
+Gitはソースコードを管理するシステムであり、遠隔地にあるリポジトリ（ソースコード管理庫）と通信するコマンド群も提供しています。Gitを使うと、プログラムを昔のある時点まで遡ったり、他の人が書いたプログラムを自分の手元に取得することができます。GitHubはGitを使ったソースコード管理を提供するほか、コードを公開したり、コードで対話する仕組みであるPull Requestといった機能を提供する開発プラットフォームです。資料としては、 [『RailsGirlsガイド GitHubに自分のアプリをPushする』](https://railsgirls.jp/github) などが参考になります。
+
+- RailsGirlsガイド GitHubに自分のアプリをPushする
+  - [https://railsgirls.jp/github](https://railsgirls.jp/github)
+
 
 ### つくったアプリを公開する
 
-ここまで作ったアプリをWebサービスとして公開するには、PaaS（Platform as a Service）と呼ばれるサービスを使うとかんたんに公開できます。アプリケーションのソースコードを転送するだけでWebサービスを公開できるので、AWSなどのサーバを借りるタイプのものと比べて手軽に使うことができます。RailsアプリではHerokuと呼ばれるサービスがよく使われています。資料としては、 [『RailsGirlsガイド Heroku に Rails アプリをアップ』](http://railsgirls.jp/heroku) のページが最新の情報へとメンテナンスされていることが多くお勧めです。
+ここまで作ったアプリをWebサービスとして公開するには、PaaS（Platform as a Service）と呼ばれるサービスを使うとかんたんに公開できます。アプリケーションのソースコードを転送するだけでWebサービスを公開できるので、AWSなどのサーバを借りるタイプのものと比べて手軽に使うことができます。RailsアプリではHerokuと呼ばれるサービスがよく使われています。資料としては、 [『RailsGirlsガイド Heroku に Rails アプリをアップ』](https://railsgirls.jp/heroku) のページが最新の情報へとメンテナンスされていることが多くお勧めです。
+
+- RailsGirlsガイド Heroku に Rails アプリをアップ
+  - [https://railsgirls.jp/heroku](https://railsgirls.jp/heroku)
 
 ### 学び方の資料
 
