Replace Rails Guides to Railsガイド

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -25,7 +25,7 @@ categories:
 
 本書の目的の1つはWebアプリ作成のための便利なフレームワークRuby on Rails（以下、Rails）を使い、題材として写真や文書を投稿できるミニブログアプリを作って動かし、その仕組みを学ぶことです。Webアプリがどういうものなのか、何ができるのか、どのような仕組みで動いているのかを説明していきます。できるだけ簡単なサンプルアプリを用意し、その仕組みを説明することで、RailsおよびWebアプリの基礎を説明していきます。
 
-また、本書の目的のもう1つは、世の中にあるたくさんの情報を読むために前提となる基礎知識を身につけることです。Railsを学ぶための良い資料として、[RailsGuides](http://railsguides.jp/) や [RailsTutorial](http://railstutorial.jp/) があります。本書を読み進めると、これらの資料を読み進めるための基礎知識が身についてきます。実践的なRailsアプリを作るために必要なさまざまな資料を読むための入り口として本書はあります。
+また、本書の目的のもう1つは、世の中にあるたくさんの情報を読むために前提となる基礎知識を身につけることです。Railsを学ぶための良い資料として、[Railsガイド](https://railsguides.jp/) や [Railsチュートリアル](https://railstutorial.jp/) があります。本書を読み進めると、これらの資料を読み進めるための基礎知識が身についてきます。実践的なRailsアプリを作るために必要なさまざまな資料を読むための入り口として本書はあります。
 
 ## 本書の対象読者
 
@@ -52,7 +52,7 @@ categories:
 
 - Railsの基礎はわかっている
 
-本書はRailsの入門的な本やサイトを読んで難しいと感じた方に、そこまでの知識を埋められるように書いています。逆に言えば、他の入門書を読める力があれば、本書は易しすぎると感じるかもしれません。具体的には、[RailsTutorial](http://railstutorial.jp/) を読み進められるようであれば、本書から得られるものは少ないのではないかと思います。
+本書はRailsの入門的な本やサイトを読んで難しいと感じた方に、そこまでの知識を埋められるように書いています。逆に言えば、他の入門書を読める力があれば、本書は易しすぎると感じるかもしれません。具体的には、[Railsチュートリアル](https://railstutorial.jp/) を読み進められるようであれば、本書から得られるものは少ないのではないかと思います。
 
 ## 書式例
 
