--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -309,7 +309,7 @@ end
 
 `@book.save`に失敗するとfalseを返すので、ifのelse節、`render :new`が実行されます。renderはコントローラの次の処理であるビューを指定します。ここでは`app/views/books/new.html.erb`がビューとして使われ、新規入力画面、つまり直前で入力していたページが表示されます。
 
-ところで、saveメソッドが失敗するのはどんなときでしょうか？DBへの接続エラーなどのアクシデントで失敗することもありますが、モデルにある検証機能「バリデーション」を使って、想定外の入力に対して保存を失敗させることもあります。たとえば、数字を期待している郵便番号入力欄に、数字以外の文字が入力されるようなケースは、バリデーションを実装することで入力画面へ戻しユーザーに再入力を促すことができます。バリデーションについてはここでは説明しませんが、便利な機能なので [Rails Guides : Active Record バリデーション](http://railsguides.jp/active_record_validations.html) などの説明を参考にしてみてください。
+ところで、saveメソッドが失敗するのはどんなときでしょうか？DBへの接続エラーなどのアクシデントで失敗することもありますが、モデルにある検証機能「バリデーション」を使って、想定外の入力に対して保存を失敗させることもあります。たとえば、数字を期待している郵便番号入力欄に、数字以外の文字が入力されるようなケースは、バリデーションを実装することで入力画面へ戻しユーザーに再入力を促すことができます。バリデーションについてはここでは説明しませんが、便利な機能なので [Rails ガイド: Active Record バリデーション](http://railsguides.jp/active_record_validations.html) などの説明を参考にしてみてください。
 
 ## まとめ
 
@@ -369,19 +369,19 @@ whereメソッドを使うと検索ができます。タイトルが"RubyとRail
 
 モデルは多くの機能を持っています。RailsGuidesにもたくさんの説明ページがあります。上手に使うことで便利な機能をかんたんに作ることができるのです。
 
-- [Rails Guides : Active Record の基礎](http://railsguides.jp/active_record_basics.html)
+- [Rails ガイド: Active Record の基礎](http://railsguides.jp/active_record_basics.html)
   - モデルに関する詳しい説明です。
 
-- [Rails Guides : Active Record マイグレーション](http://railsguides.jp/active_record_migrations.html)
+- [Rails ガイド: Active Record マイグレーション](http://railsguides.jp/active_record_migrations.html)
   - DBのマイグレーションに関する詳しい説明です。
 
-- [Rails Guides : Active Record クエリインターフェイス](http://railsguides.jp/active_record_querying.html)
+- [Rails ガイド: Active Record クエリインターフェイス](http://railsguides.jp/active_record_querying.html)
   - モデルの中で、検索に関する詳しい説明です。
 
-- [Rails Guides : Active Record バリデーション](http://railsguides.jp/active_record_validations.html)
+- [Rails ガイド: Active Record バリデーション](http://railsguides.jp/active_record_validations.html)
   - モデルには「バリデーション」と呼ばれる、値のチェック機能がついています。実際のアプリを作るときによく使う便利な機能なので、ぜひチャレンジしてみてください。
 
-- [Rails Guides : Active Record の関連付け](http://railsguides.jp/association_basics.html)
+- [Rails ガイド: Active Record の関連付け](http://railsguides.jp/association_basics.html)
   - 複数のモデルを結び付ける「関連付け」の機能は強力でアプリを作るときによく利用します。ぜひチャレンジしてみてください。
 
 また、発展的な内容を以降に書きますので、あわせて参考にしてみてください。
