Add option to use Ruby2.6

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -172,7 +172,7 @@ $ source ~/.bashrc
 
 ### RubyとRailsをインストールする
 
-rbenvを使ってRubyをインストールします。Rubyのバージョンは、より新しいものがあればそちらを利用して構いません。rbenvからインストール可能なRubyのバージョンは`rbenv install -l`で調べることができます。
+rbenvを使ってRubyをインストールします。Rubyのバージョンは、より新しいものがあればそちらを利用して構いません。rbenvからインストール可能なRubyのバージョンは`rbenv install -l`で調べることができます。また、この節の後ろで詳しく説明しますが、Ruby2.7.0とRails 6.0.2.1の組み合わせは、次のバージョンへ向けての互換性に関する警告がターミナルで多く表示されます。学習が難しくなるようであれば、後述の方法で対応するか、またはRuby2.6.5など、Ruby2.6系の一番新しいものを利用してみてください。
 
 ```console
 $ rbenv install 2.7.0
