apply and fix lint

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -76,7 +76,7 @@ Use Ctrl-C to stop
 
 ![データを入力してCreate Bookボタン](assets/crud/books_created_data_1.png)
 
-ここからBackボタンを押すと最初の`/books`のページに戻りますが、先ほど入力したデータが表示されていることが分かるかと思います。
+ここからBackボタンを押すと最初の`/books`のページに戻りますが、先ほど入力したデータが表示されていることがわかります。
 
 ![入力したデータが表示される](assets/crud/books_index_data_1.png)
 
@@ -205,7 +205,7 @@ class BooksController < ApplicationController
 
 @booksは@から始まる変数、インスタンス変数です。「一番小さなRailsアプリつくり」でも説明したように、インスタンス変数@booksを使っているのは、このあとviewで利用するためです。もしも、ここで変数をローカル変数booksにしてしまうと、コントローラの処理が終わったところでなくなってしまいます。
 
-もうひとつ大切なことがあります。@booksと複数形になっています。これは、Book.allで取得するデータが複数の本のデータを格納した配列であることを示すためです。場合によっては、本のデータが1個、あるいは0個である、という状況もあります。そのときも1個、あるいは0個のデータが入った配列が取得されます。どのパターンも@booksへは配列を代入するため、変数名を複数形の@booksにするのが慣習です。細かいことのようですが、RailsやRubyでのプログラミングでは変数の名前を複数形と単数形を意識して命名することが大切です。
+もうひとつ大切なことがあります。@booksと複数形になっています。これは、Book.allで取得するデータが複数の本のデータを格納した配列であることを示すためです。場合によっては、本のデータが1個、あるいは0個である、という状況もあります。そのときも1個、あるいは0個のデータが入った配列が得られます。どのパターンも@booksへは配列を代入するため、変数名を複数形の@booksにするのが慣習です。細かいことのようですが、RailsやRubyでのプログラミングでは変数の名前を複数形と単数形を意識して命名することが大切です。
 
 コントローラのアクションでの処理が終わると、次はビューで処理が移ります。特に指定がないときは、`app/views/コントローラ名/アクション名`のviewファイルへ処理が移ります。ここでは`app/views/books/index.html.erb`です。
 
