--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -443,7 +443,7 @@ $ rails db:migrate
 
 ![booksテーブルにstring型のauthorを加えるmigration](assets/model/migration_new_column_author.png)
 
-ちなみに、Railsのgenerate機能は開発をアシストする機能なので、使わないで0から手でコードを書いても同様に動きます。つまり、rails gを使ってファイルを自動生成してから変更しても、0から手でコードを書いても、どちらも同じ結果になります。ほかのrails gコマンド、scaffoldやcontrollerなども全て同様です。
+ちなみに、Railsのgenerate機能は開発をアシストする機能なので、使わないで0から手でコードを書いても同様に動きます。つまり、rails gを使ってファイルを自動生成してから変更しても、0から手でコードを書いても、どちらも同じ結果になります。他のrails gコマンド、scaffoldやcontrollerなどもすべて同様です。
 
 ## 新しいモデルとmigrationを一緒に作るには？
 
