--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -201,7 +201,7 @@ Rails 6.0.2.1
 
 Railsは最新バージョンのものをつかって問題ありませんが、もしも問題が出て進められなくなったときには、`gem i rails -v 6.0.2.1`のようにバージョンを指定して、本書の内容と揃えることもできます。そのときには、以降のページで出てくる`rails new アプリ名`コマンドを実行するときに、つかうバージョンを指定し`rails _6.0.2.1_ new アプリ名`とします。
 
-また、本書執筆時の最新バージョンであるRuby2.7.0とRails6.0.2.1の組み合わせは、ターミナルで多くのWarning（警告）メッセージが出ます。次のバージョンへ向けての互換性に関する警告が多く、有用で大切なものではありますが、ほかの重要なメッセージが見づらくなる問題もあります。RubyとRailsのバージョンをみなさんが実行するときの最新バージョンにすることで、Warningメッセージが少なくなっている可能性があります。できるだけ新しいバージョンを使うことをお勧めします。
+また、本書執筆時の最新バージョンであるRuby2.7.0とRails6.0.2.1の組み合わせは、ターミナルで多くのWarning（警告）メッセージが出ます。次のバージョンへ向けての互換性に関する警告が多く、有用で大切なものではありますが、他の重要なメッセージが見づらくなる問題もあります。RubyとRailsのバージョンをみなさんが実行するときの最新バージョンにすることで、Warningメッセージが少なくなっている可能性があります。できるだけ新しいバージョンを使うことをお勧めします。
 
 メッセージがWarningで埋もれて学習に支障が出るときは、railsコマンドを実行するときに `RUBYOPT='-W:no-deprecated'` を追加することで、互換性に関する警告を非表示にすることができます。毎回コマンドを入力するのが大変なときはrails newでRailsアプリをつくったあとで、config/boot.rbの1行目に `Warning[:deprecated] = false` を追記することで同様の効果が得られます。ただし、config/boot.rbに追記する方法は、起動時のWarningだけは表示されます。また、WarningメッセージはRubyを開発するみなさんから私たちへ送られる有用なメッセージです。もしも実際に稼働しているRailsアプリでWarningを抑制するときは熟慮してから対応してください。
 
