--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -35,7 +35,7 @@ $ rails new books_app
 Webpacker successfully installed 🎉 🍰
 ```
 
-次に、以下のコマンドを実行します（メッセージ中"in process 52142"、"20160702024137"、"-> 0.0013s"などの数字は実行するごとに異なります）。
+次に、以下のコマンドを実行します（メッセージ中"in process 20280"、"20191012005727"、"0.xxxxs"などの数字は実行するごとに異なります）。
 
 ```bash
 cd books_app
@@ -135,7 +135,7 @@ Running via Spring preloader in process 20280
 
 ![CRUD 4つの画面](assets/crud/crud_4_pages.png)
 
-それぞれの機能と対応するアクションを示したものが次の図です。前の章でも説明されたアクションは、コントローラに書かれたpublicなメソッドのことです。1つの画面を表示するとき、1つのアクションが実行されているのが基本形です。
+それぞれの機能と対応するアクションを示したものが次の図です。前の章でも説明されたアクションは、コントローラに書かれたpublicなメソッドのことです。基本となるケースでは、1つの画面を表示するときに1つのアクションが実行されています。
 
 ![CRUD 7つのアクション](assets/crud/crud_7_actions.png)
 
@@ -201,11 +201,11 @@ class BooksController < ApplicationController
 
 `class BooksController < ApplicationController`から最後の行の`end`までがBooksControllerのコードです。この中のindexメソッド、つまり`def index`から次の`end`までがindexアクションになります。
 
-ここでやっていることは1行、`@books = Book.all` です。Book.allでBookの全データがつまった配列を取得して、@booksインスタンス変数へ代入します。Book.allでBookの全データがとれる仕組みについては、「モデル」の章で説明します。
+ここでやっていることは1行、`@books = Book.all` です。Book.allでBookの全データを取得して、@booksインスタンス変数へ代入します。Book.allでBookの全データがとれる仕組みについては、「モデル」の章で説明します。
 
 @booksは@から始まる変数、インスタンス変数です。「一番小さなRailsアプリつくり」でも説明したように、インスタンス変数@booksを使っているのは、このあとviewで利用するためです。もしも、ここで変数をローカル変数booksにしてしまうと、コントローラの処理が終わったところでなくなってしまいます。
 
-もうひとつ大切なことがあります。@booksと複数形になっています。これは、Book.allで取得するデータが複数の本のデータを格納した配列であることを示すためです。場合によっては、本のデータが1個、あるいは0個である、という状況もあります。そのときも1個、あるいは0個のデータが入った配列が得られます。どのパターンも@booksへは配列を代入するため、変数名を複数形の@booksにするのが慣習です。細かいことのようですが、RailsやRubyでのプログラミングでは変数の名前を複数形と単数形を意識して命名することが大切です。
+もうひとつ大切なことがあります。@booksと複数形になっています。これは、Book.allで取得するデータが複数の本のデータを格納していることを示すためです。場合によっては、本のデータが1個、あるいは0個である、という状況もあります。そのときも1個、あるいは0個のデータが入った配列相当のものが得られるため、どのパターンでも変数名を複数形の@booksにするのが慣習です。細かいことのようですが、RailsやRubyでのプログラミングでは変数の名前を複数形と単数形を意識して命名することが大切です。
 
 コントローラのアクションでの処理が終わると、次はビューで処理が移ります。特に指定がないときは、`app/views/コントローラ名/アクション名`のviewファイルへ処理が移ります。ここでは`app/views/books/index.html.erb`です。
 
@@ -235,9 +235,9 @@ class BooksController < ApplicationController
 
 表示は`<% @books.each do |book| %>`から`<% end %>` で行っています。@booksに代入された全データ（"RubyとRailsの学習ガイド"、"Ruby超入門"）でブロックを繰り返し実行し、titleやmemoを表示したり、Show（詳細画面）、Edit（編集画面）、削除ボタンのリンクを生成します。
 
-今回のケースでは、@booksに2つのデータが入っています。@books.each文は全データで繰り返し処理を行う文です。1回目の実行では変数book（2つの`|`記号で囲まれているところ）に「RubyとRailsの学習ガイド」のデータが入った状態となり、そのtitleやmemoが表示されます。2回目の実行では「Ruby超入門」のデータが格納されて同様の処理が実行されます。
+今回のケースでは、@booksに2つのデータが入っています。@books.eachは全データで繰り返し処理を行います。1回目の実行では変数book（2つの`|`記号で囲まれているところ）に「RubyとRailsの学習ガイド」のデータが入った状態となり、そのtitleやmemoが表示されます。2回目の実行では「Ruby超入門」のデータが格納されて同様の処理が実行されます。
 
-index.html.erbはHTMLのテンプレートファイルで、HTMLの中にRubyコードを埋め込むことができます。`<%= %>`で囲まれたコードは実行結果がHTMLとして出力されます。`<% %>` で囲まれたコードは実行されますが、結果を埋め込みません。今回は@books.eachの繰り返しで `<% %>` が使われています。
+index.html.erbはHTMLのテンプレートファイルで、HTMLの中にRubyコードを埋め込むことができます。`<%= %>`で囲まれた部分は、Rubyコードの実行結果がHTMLとして埋め込まれます。類似の部品`<% %>`では、囲まれたRubyコードは実行されますが結果を埋め込みません。今回は@books.eachの繰り返しの指示で `<% %>` が使われています。
 
 RailsアプリはつくられたHTMLをレスポンスとしてブラウザに返します。ブラウザは受け取ったHTMLを私たちが見れる形で表示します。
 
