Change font to gothic

--- a/_review/sty/mystyle.sty
+++ b/_review/sty/mystyle.sty
@@ -5,3 +5,6 @@
 %%%   review initコマンドが用意する「reviewmacro.sty」や、
 %%%   starterが自動生成する「starter.sty」とは別ファイルにしている）
 %%%
+
+\renewcommand\kanjifamilydefault{\gtdefault}  % 本文をゴシック体に
+\renewcommand\familydefault{\sfdefault}       % 英文をサンセリフ体に
