--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -94,12 +94,12 @@ gem 'sqlite3', '~> 1.4'
 gem 'awesome_print'
 ```
 
-追加して保存したら、以下のようにbundle installコマンドを実行します。または、installを省略してbundleとすることもできます。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
+追加して保存したら、以下のようにbundle installコマンドを実行します。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
 
 TODO: 最新Railsバージョンで更新
 
 ```console
-$ bundle
+$ bundle install
 Using rake 13.0.1
 ...
 Using awesome_print 1.8.0
@@ -145,11 +145,11 @@ $ rails c
 
 特定のGemだけをバージョンアップしたい場合は、`bundle update Gem名` とGem名をつけて実行すればOKです。指定したGemが利用している他のGemがある場合は、セットでバージョンアップされます。
 
-## Gemfileを使って実行する
+## Gemfileに書かれたGemを使って実行する
 
-bundle updateの結果、新しいバージョンのGemがインストールされた場合、古いバージョンのGemはアンインストールされないので、同じGemの複数のバージョンがインストールされた状態になります。通常は新しいバージョンのGemが利用され、それで問題がないケースが多いのですが、Gemfileに書かれた（古い）バージョンのGemを使って実行したいケースもあります。
+bundle updateの結果、新しいバージョンのGemがインストールされた場合、古いバージョンのGemはアンインストールされないので、同じGemの複数のバージョンがインストールされた状態になります。通常は新しいバージョンのGemが利用され、それで問題がないケースが多いのですが、GemfileとGemfile.lockに書かれた（古い）バージョンのGemを使って実行したいケースもあります。
 
-そのような場合は、bundle execコマンドを使うことでGemfile, Gemfile.lockに書かれたGemバージョンでRubyのプログラムを実行することができます。
+そのような場合は、bundle execコマンドを使うことでGemfileとGemfile.lockに書かれたGemバージョンでRubyのプログラムを実行することができます。
 
 ```
 bundle exec rake -T
@@ -186,6 +186,6 @@ gem 'sqlite3', '~> 1.4'
 - Gemをインストールするにはgem iコマンド（gem installの省略形）を使う
 - Bundlerは複数のGemをかんたんに管理する仕組み
 - BundlerではGemfileという名前のファイルに使用するGemを書く
-- Gemfileを作成しbundleコマンド（bundle installの省略形）を実行すると、Gem群がインストールされる
+- Gemfileを作成しbundle installコマンドを実行すると、Gem群がインストールされる
 - bundleコマンドを実行するとGemfileに加えてGemfile.lockファイルが生成されるので、両方をソース管理対象にする
 - Gemfileは発注書、Gemfile.lockは納品書に相当する
