Change ゴシック font to 明朝 font on review PDF

--- a/_review/sty/mystyle.sty
+++ b/_review/sty/mystyle.sty
@@ -6,5 +6,5 @@
 %%%   starterが自動生成する「starter.sty」とは別ファイルにしている）
 %%%
 
-\renewcommand\kanjifamilydefault{\gtdefault}  % 本文をゴシック体に
-\renewcommand\familydefault{\sfdefault}       % 英文をサンセリフ体に
+% \renewcommand\kanjifamilydefault{\gtdefault}  % 本文をゴシック体に
+% \renewcommand\familydefault{\sfdefault}       % 英文をサンセリフ体に
