--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -133,13 +133,11 @@ cd books_app
 rails c
 ```
 
-TODO: 最新Railsバージョンで置き換え
-
 ```console
 $ rails c
-Running via Spring preloader in process 16386
-Loading development environment (Rails 6.0.0)
-irb(main):001:0> exit
+Running via Spring preloader in process 5615
+Loading development environment (Rails 6.0.2.1)
+irb(main):001:0>
 ```
 
 rails consoleで以下のコードを実行してみてください。
