--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -73,13 +73,11 @@ BundlerでGem群をインストールするには2つの手順を実行します
 
 Railsアプリは最初からBundlerの仕組みを利用するようになっています。GemfileはRailsアプリの場合、Railsのルートフォルダに置いてあります。エディタで開いてみましょう。
 
-TODO: 最新Railsバージョンで更新
-
 ```ruby
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-#ruby '2.7.0'
+ruby '2.7.0'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 6.0.2', '>= 6.0.2.1'
@@ -96,15 +94,13 @@ gem 'awesome_print'
 
 追加して保存したら、以下のようにbundle installコマンドを実行します。このコマンドの実行時にはネットワークへ接続が必要なため、少し時間がかかります。また、各Gemのバージョンや、Bundle complete!につづけて表示される数字は異なることがあります。
 
-TODO: 最新Railsバージョンで更新
-
 ```console
 $ bundle install
 Using rake 13.0.1
 ...
 Using awesome_print 1.8.0
 ...
-Bundle complete! 18 Gemfile dependencies, 76 gems now installed.
+Bundle complete! 17 Gemfile dependencies, 75 gems now installed.
 Use `bundle info [gemname]` to see where a bundled gem is installed.
 ```
 
@@ -164,10 +160,10 @@ bundle exec rake -T
 利用するバージョンを指定したい場合は、Gemfileにバージョンを追記します。RailsアプリのGemfileを見ると、いくつかバージョンがすでに指定してあるものがあります。
 
 ```ruby
-gem 'bootsnap', '>= 1.4.2'
+gem 'capybara', '>= 2.15'
 ```
 
-これは「bootsnap Gemのバージョンは、1.4.2以上」という意味の指定になります。これは数式の意味と同じですね。一方、こんな見慣れないバージョン指定表記があります。
+これは「capybara Gemのバージョンは、2.15以上」という意味の指定になります。これは数式の意味と同じですね。一方、こんな見慣れないバージョン指定表記があります。
 
 ```ruby
 gem 'sqlite3', '~> 1.4'
