--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -419,7 +419,7 @@ end
 migrationファイルを作成したら、`rails db:migrate`コマンドでDBへ内容を反映します。
 
 ```bash
-$ rails db:migrate
+rails db:migrate
 ```
 
 ```console
@@ -485,7 +485,7 @@ $ rails g scaffold book title:string memo:text
 ### booksテーブルにstring型のauthorを加える
 
 ```bash
-$ rails g migration AddAuthorToBooks author:string
+rails g migration AddAuthorToBooks author:string
 ```
 ```console
 $ rails g migration AddAuthorToBooks author:string
