Change main Ruby version to 2.6.5

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -99,7 +99,7 @@ Use Ctrl-C to stop
 
 ## 開発環境
 
-本書は2020年1月1日現在の最新バージョンであるRuby 2.7.0、Rails 6.0.2.1で動作確認をしています。
+本書は2020年1月1日現在の最新バージョンであるRuby 2.7.0、Rails 6.0.2.1で動作確認をしています。また、Ruby2.6.5でも動作確認しています。
 
 Webアプリのプログラムを書くための道具として、ターミナル、エディタ、ブラウザをつかいます。
 
@@ -175,16 +175,16 @@ $ source ~/.bashrc
 
 ### RubyとRailsをインストールする
 
-rbenvを使ってRubyをインストールします。Rubyのバージョンは、より新しいものがあればそちらを利用して構いません。rbenvからインストール可能なRubyのバージョンは`rbenv install -l`で調べることができます。また、この節の後ろで詳しく説明しますが、Ruby2.7.0とRails 6.0.2.1の組み合わせは、次のバージョンへ向けての互換性に関する警告がターミナルで多く表示されます。学習が難しくなるようであれば、後述の方法で対応するか、またはRuby2.6.5など、Ruby2.6.xの一番新しいものを利用してみてください。
+rbenvを使ってRubyをインストールします。Rubyのバージョンは、より新しいものがあればそちらを利用して構いません。rbenvからインストール可能なRubyのバージョンは`rbenv install -l`で調べることができます。また、この節の後ろで詳しく説明しますが、Ruby2.7.0とRails 6.0.2.1の組み合わせは、次のバージョンへ向けての互換性に関する警告がターミナルで多く表示されます。警告が多く出て学習が難しくなるようであれば、以下のようにRuby2.6.5など、Ruby2.6.xの一番新しいものを利用してみてください。
 
 ```console
-$ rbenv install 2.7.0
+$ rbenv install 2.6.5
 ```
 
 インストールしたRubyを利用するように設定します。
 
 ```console
-$ rbenv global 2.7.0
+$ rbenv global 2.6.5
 ```
 
 以上でRubyのインストールは完了です。続いて、インストールしたRubyを使ってRailsをインストールします。
@@ -204,7 +204,7 @@ Rails 6.0.2.1
 
 Railsは最新バージョンのものをつかって問題ありませんが、もしも問題が出て進められなくなったときには、`gem i rails -v 6.0.2.1`のようにバージョンを指定して、本書の内容と揃えることもできます。そのときには、以降のページで出てくる`rails new アプリ名`コマンドを実行するときに、つかうバージョンを指定し`rails _6.0.2.1_ new アプリ名`とします。
 
-また、本書執筆時の最新バージョンであるRuby2.7.0とRails6.0.2.1の組み合わせは、ターミナルで多くのWarning（警告）メッセージが出ます。次のバージョンへ向けての互換性に関する警告が多く、有用で大切なものではありますが、他の重要なメッセージが見づらくなる問題もあります。RubyとRailsのバージョンをみなさんが実行するときの最新バージョンにすることで、Warningメッセージが少なくなっている可能性があります。できるだけ新しいバージョンを使うことをお勧めします。
+また、本書執筆時の最新バージョンであるRuby2.7.0とRails6.0.2.1の組み合わせは、ターミナルで多くのWarning（警告）メッセージが出ます。次のバージョンへ向けての互換性に関する警告が多く、有用で大切なものではありますが、他の重要なメッセージが見づらくなる問題もあります。上述のようにRuby2.6.5とRails6.0.2.1で利用するか、または、RubyとRailsのバージョンをみなさんが実行するときの最新バージョンにすることで、Warningメッセージが少なくなっている可能性があります。できるだけ新しいバージョンを使うことをお勧めします。
 
 メッセージがWarningで埋もれて学習に支障が出るときは、railsコマンドを実行するときに `RUBYOPT='-W:no-deprecated'` を追加することで、互換性に関する警告を非表示にすることができます。毎回コマンドを入力するのが大変なときはrails newでRailsアプリをつくったあとで、config/boot.rbの1行目に `Warning[:deprecated] = false` を追記することで同様の効果が得られます。ただし、config/boot.rbに追記する方法は、起動時のWarningだけは表示されます。また、WarningメッセージはRubyを開発するみなさんから私たちへ送られる有用なメッセージです。もしも実際に稼働しているRailsアプリでWarningを抑制するときは熟慮してから対応してください。
 
