細ゴシック+英数字馴染む版にフォント変更

--- a/_review/sty/mystyle.sty
+++ b/_review/sty/mystyle.sty
@@ -6,9 +6,6 @@
 %%%   starterが自動生成する「starter.sty」とは別ファイルにしている）
 %%%
 
-% \renewcommand\kanjifamilydefault{\gtdefault}  % 本文をゴシック体に
-% \renewcommand\familydefault{\sfdefault}       % 英文をサンセリフ体に
-
 %%% 日本語フォントの太さを細くするよう変更
 %%% （Notoフォントを使っていることが前提なので、Docker環境を使うか、
 %%%   Notoフォントを自分でインストールすること）
@@ -31,5 +28,5 @@
 \makeatother
 
 %%% デフォルトのフォントを明朝体からゴシック体に変更
-%\renewcommand\familydefault{\sfdefault}      % 英数字のデフォルトをサンセリフに変更
+\renewcommand\familydefault{\sfdefault}      % 英数字のデフォルトをサンセリフに変更
 \renewcommand\kanjifamilydefault{\gtdefault} % 日本語のデフォルトをゴシック体に変更
